--- a/wp-content/themes/stacylauren/sass/layout/_footer.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_footer.scss
@@ -1,17 +1,20 @@
 .site-footer {
 	background-color: rgba(0, 0, 0, 0.25);
-	padding: 15px 0;
+	padding: 15px 15px 50px 15px;
 	z-index: 5000;
 	text-align: center;
 	color: $lightgray;
 	font-size: .8em;
+	box-sizing: border-box;
+	width: 100%;
+	flex-shrink: 0;
 	a {
     font-family: $secondary-font;
-    color:#ffffff !important;
+    color: white !important;
     text-decoration: none;
     transition: .5s background-color;
 	    &:hover {
-	    	color:$pink;
+	    	color:$pink !important;
 	    }
  	}
  	p {
