--- a/wp-content/themes/stacylauren/sass/layout/_global.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_global.scss
@@ -27,40 +27,12 @@
 	margin: 0;
 	background-attachment: fixed;
 	height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
-
-.entry-header {
-	padding: 1em;
-    background: rgba(0, 0, 0, 0.5);
-    color: $mutedteal;
-    text-align: center;
-    h1 {
-    	font-size: 5em;
-    	font-family: $accent-font;	
-    }
-	@media ($screen-xs) {
-		padding: .5em;
-		font-size: .8em;
-	}    
-}
-
-.arrow-down {
-	position: relative;
-	left: 50%;
-	width: 0; 
-	height: 0; 
-	border-left: 15px solid transparent;
-	border-right: 15px solid transparent;
-	border-top: 15px solid rgba(0, 0, 0, 0.5);
-	@media ($screen-xs) {
-		left: 47%;
-	}
-}
-
-.entry-content {
-	
-	background-color: rgba(255, 255, 255, 0.75);
+.site {
+	flex: 1 0 auto;
 }
 
 .services {
