--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -13,7 +13,7 @@
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: 1.5em 0 ;
 }
 
 .page-links {
@@ -23,8 +23,8 @@
 
 .entry-header {
 	padding: 1em;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
+    background: rgba(255, 255, 255, 0.5);
+    color: black;
     text-align: center;
     h1 {
     	font-size: 5em;
@@ -44,15 +44,10 @@
 	height: 0; 
 	border-left: 15px solid transparent;
 	border-right: 15px solid transparent;
-	border-top: 15px solid rgba(0, 0, 0, 0.5);
+	border-top: 15px solid rgba(255, 255, 255, 0.5);
 	@media ($screen-xs) {
 		left: 47%;
 	}
-}
-
-.entry-content {
-	
-	background-color: rgba(255, 255, 255, 0.75);
 }
 
 .projects {
@@ -90,4 +85,72 @@
 		padding: 1em;
 		box-sizing: border-box;
 	}
+}
+
+/* Caption Hoover Effects */
+.projects figure {
+	margin: 0;
+	position: relative;
+}
+
+.projects figure img {
+	max-width: 100%;
+	display: block;
+	position: relative;
+}
+
+.projects figcaption {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 20px;
+	background: #2c3f52;
+	color: #ed4e6e;
+}
+
+.projects figcaption h3 {
+	margin: 0;
+	padding: 0;
+	color: #fff;
+}
+
+.projects figcaption span:before {
+	content: 'by ';
+}
+
+.projects figcaption a {
+	text-align: center;
+	padding: 5px 10px;
+	border-radius: 2px;
+	display: inline-block;
+	background: #ed4e6e;
+	color: #fff;
+}
+
+.projects figure img {
+	z-index: 10;
+	-webkit-transition: -webkit-transform 0.4s;
+	-moz-transition: -moz-transform 0.4s;
+	transition: transform 0.4s;
+}
+
+.no-touch .projects figure:hover img,
+.projects figure.cs-hover img {
+	-webkit-transform: translateY(-90px);
+	-moz-transform: translateY(-90px);
+	-ms-transform: translateY(-90px);
+	transform: translateY(-90px);
+}
+
+.projects figcaption {
+	height: 90px;
+	width: 100%;
+	top: auto;
+	bottom: 0;
+}
+
+.projects figcaption a {
+	position: absolute;
+	right: 20px;
+	top: 30px;
 }
