--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -955,14 +955,17 @@ textarea {
 	}
 }
 
+#wpadminbar {
+	position: fixed !important;
+}
+
 .content-area {
 	margin-top: 62px;
 }
 
 #gradient {
-	width: inherit;
-	padding: 0px;
-	margin: 0px;
+	padding: 0;
+	margin: 0;
 	z-index: 0;
 }
 
@@ -978,13 +981,20 @@ textarea {
 /* Standard syntax (must be last) */
 /*}*/
 .bg {
+	width: 100vw;
 	background: url(img/bg.png) repeat;
 	background-size: 75px 75px;
 	z-index: 100;
 	padding: 0;
 	margin: 0;
 	background-attachment: fixed;
+}
+
+.sticky-footer-box {
 	height: 100vh;
+	width: 100vw;
+	margin: 0;
+	padding: 0;
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-direction: column;
@@ -994,6 +1004,7 @@ textarea {
 .site {
 	-ms-flex: 1 0 auto;
 	    flex: 1 0 auto;
+	overflow-x: hidden !important;
 }
 
 .services {
@@ -1102,8 +1113,8 @@ textarea {
 
 .site-footer {
 	background-color: rgba(0, 0, 0, 0.25);
-	padding: 15px 15px 50px 15px;
-	z-index: 5000;
+	padding: 15px;
+	z-index: 99;
 	text-align: center;
 	color: #e3e3e3;
 	font-size: .8em;
@@ -1562,7 +1573,7 @@ body, html {
 .entry-header {
 	padding: 1em;
 	background: rgba(255, 255, 255, 0.5);
-	color: black;
+	color: #D4145A;
 	text-align: center;
 }
 
@@ -1643,7 +1654,8 @@ body, html {
 }
 
 .projects figure img {
-	max-width: 100%;
+	width: 100%;
+	height: auto;
 	display: block;
 	position: relative;
 }
