--- a/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
+++ b/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
@@ -30,5 +30,6 @@ $pink:          #D4145A;
 $mauve:         #946a6c;
 $orange:        #de9a18;
 $gray:          #626262;
+$darkgray:      #626262;
 $lightgray:     #e3e3e3;
 $silver:        #495E67;
