--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -844,7 +844,6 @@ textarea {
 	height: 30px;
 	float: left;
 	/*padding-left: 35px;*/
-	/* HOVER COLOR */
 	/*@media ($screen-xs) {
         width: 70%;
 		padding-left: 0;
@@ -859,10 +858,6 @@ textarea {
 	height: auto;
 	width: 35px;
 	margin-right: 15px;
-}
-
-.branding-container:hover svg {
-	fill: #D4145A;
 }
 
 /*.site-header {
@@ -923,25 +918,18 @@ textarea {
 .branding {
 	position: relative;
 	height: 100vh;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-ms-flex-align: center;
+	    align-items: center;
 }
 
 .title {
 	text-align: center;
-	top: 20%;
 	color: white;
 	min-width: 375px;
-}
-
-@media (min-width: 1200px) and (max-width: 1439px) {
-	.title {
-		top: 20%;
-	}
-}
-
-@media (max-width: 767px) {
-	.title {
-		top: 15%;
-	}
 }
 
 .logo img {
