--- a/wp-content/themes/stacylauren/sass/layout/_header.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_header.scss
@@ -13,7 +13,7 @@
     text-decoration: none;
     transition: .5s background-color;
 	    :hover {
-	    	color:$pink;
+	    	color:$green;
 	    }
  	}
 }
@@ -86,11 +86,8 @@
     /*width: 25%;*/
     float: right;
     box-sizing: border-box;
-    padding: 0;
+    padding: 0 20px 0 0;
     position: relative;
-    @media ($screen-xs) {
-		padding: 5px 0 0 0;
-	}
     /* @media ($screen-xs) {
 		width: 200px;
 		margin: 0 auto;
