--- a/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
+++ b/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
@@ -8,10 +8,10 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__link: white;
+$color__link-visited: white;
+$color__link-hover: #78A22F;
+$color__text-main: #e6e6e6;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
@@ -22,7 +22,7 @@ $color__border-abbr: #666;
 
 $yellow:        #FCEE21;
 $lime-green:    #D9E021;
-$green:         #8CC63F;
+$green:         #78A22F;
 $teal:          #00B0B0;
 $mutedteal:     #75b691;
 $purple:        #93278F;
