--- a/wp-content/themes/stacylauren/sass/layout/_footer.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-	background-color: rgba(0, 0, 0, 0.25);
+	background-color: rgba(0, 0, 0, 0.15);
 	padding: 15px;
 	z-index: 99;
 	text-align: center;
@@ -14,7 +14,7 @@
     text-decoration: none;
     transition: .5s background-color;
 	    &:hover {
-	    	color:$pink !important;
+	    	color:$green !important;
 	    }
  	}
  	p {
