--- a/wp-content/themes/stacylauren/sass/layout/_global.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_global.scss
@@ -16,7 +16,7 @@
 	/*background: $lightgray url(img/bg.png) repeat;*/
 	background-color: $lightgray;
 	background-image: url(img/bg.png), gradient(linear, 0 0, 100% 100%, from($orange), to($pink));
-	background-image: url(img/bg.png), linear-gradient(to right top, $orange, $pink); /* For Safari 5.1 to 6.0 */ /* For Opera 11.1 to 12.0 */ /* For Firefox 3.6 to 15 */ /* Standard syntax (must be last) */
+	background-image: url(img/bg.png), linear-gradient(to right top, $orange, $pink); 
 	background-repeat: repeat, repeat;
 	background-size: 75px 75px, 100% 100%;	
 	background-attachment: fixed, fixed;
