--- a/wp-content/themes/stacylauren/sass/layout/_global.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_global.scss
@@ -15,10 +15,11 @@
 #body_bg {
 	/*background: $lightgray url(img/bg.png) repeat;*/
 	background-color: $lightgray;
-	background-image: url(img/bg.png), gradient(linear, 0 0, 100% 100%, from($orange), to($pink));
-	background-image: url(img/bg.png), linear-gradient(to right top, $orange, $pink); 
+	background-image: url(img/bg3.png), gradient(linear, 0 0, 100% 100%, from($orange), to($pink));
+	background-image: url(img/bg3.png), linear-gradient(to right top, $orange, $pink); 
 	background-repeat: repeat, repeat;
-	background-size: 75px 75px, 100% 100%;	
+	/*background-size: 1200px 1200px, 100% 100%;*/	
+	background-size: 600px auto, 100% 100%;
 	background-attachment: fixed, fixed;
 	
 }
@@ -36,8 +37,8 @@
 .bg {
 	width: 100vw;
 	height: 100vh;
-	background: url(img/bg.png) repeat;
-	background-size: 75px 75px;
+	background: url(img/bg3.png) repeat;
+	/*background-size: 75px 75px;*/
 	z-index: 100;
 	padding: 0;
 	margin: 0;
