--- a/wp-content/themes/stacylauren/sass/layout/_header.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_header.scss
@@ -9,7 +9,7 @@
     font-family: $secondary-font;
     color:#ffffff !important;
     text-transform: uppercase;
-    letter-spacing: .25em; 
+   /*letter-spacing: .25em; */
     text-decoration: none;
     transition: .5s background-color;
 	    :hover {
