--- a/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
+++ b/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
@@ -11,7 +11,7 @@ $color__text-input-focus: #111;
 $color__link: white;
 $color__link-visited: white;
 $color__link-hover: #78A22F;
-$color__text-main: #e6e6e6;
+$color__text-main: #626262;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
@@ -31,5 +31,6 @@ $mauve:         #946a6c;
 $orange:        #de9a18;
 $gray:          #626262;
 $darkgray:      #626262;
+$medgray:       #9a9a9a;
 $lightgray:     #e3e3e3;
 $silver:        #495E67;
