--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -3,7 +3,7 @@
 }
 
 .hentry {
-	margin: 0 0 1.5em;
+	margin: 0;
 }
 
 .updated:not(.published) {
@@ -23,22 +23,29 @@
 
 .entry-content {
     z-index: 0;
+    margin: 0;
+    background: rgba(255, 255, 255, 1);
 }
 
 .entry-header {
-    position: fixed;
+    position: relative;
     width: 100%;
+    height: 300px;
     z-index: 10;
 	padding: 1em;
-    background: rgba(255, 255, 255, .85);
-    color: $silver;
+	display: flex;
+	align-items: center;
+    justify-content: center;
+    /*background: rgba(255, 255, 255, .85);*/
+    color: black;
     text-align: center;
     h1 {
-    	font-size: 4em;
-    	font-family: $secondary-font;	
-    	margin: 0;
+    	font-size: 7em;
+    	font-family: $accent-font;	
+    	text-transform: none;
+    	margin: -32px 0 0;
     }
-    ::after {
+    /*::after {
         position: absolute;
         bottom: -15px;
     	left: 50%;
@@ -50,7 +57,7 @@
     	@media ($screen-xs) {
     		left: 47%;
     	}
-    }
+    }*/
 	@media ($screen-xs) {
 		padding: .5em;
 		font-size: .8em;
@@ -58,14 +65,35 @@
 }
 
 .arrow-down {
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    margin-top: 32px;
+}
 
+.arrow-down, .arrow-down:after, .arrow-down:before {
+    content: "";
+    position: absolute;
+    height: 32px;
+    bottom: 0;
+}
+
+.arrow-down:after, .arrow-down:before {
+    left: -16px;
+    width: 50%;
+    background-color: rgba(255, 255, 255, 1);
+    transform: skew(45deg,0);
+    z-index: 100;
+}
+
+.arrow-down:after {
+    left: auto;
+    right: -16px;
+    transform: skew(-45deg,0);
 }
 
 .content {
-    margin-top: 200px;
-    @media ($screen-xs) {
-        margin-top: 150px;
-    }
+    margin-top: 25px;
 }
 
 .projects {
