--- a/wp-content/themes/stacylauren/sass/typography/_typography.scss
+++ b/wp-content/themes/stacylauren/sass/typography/_typography.scss
@@ -105,7 +105,7 @@ textarea {
 blockquote {
     font-size: .9em;
     font-style: italic;
-    border-left: 5px solid $mutedteal;
+    border-left: 5px solid $green;
 }
 
 
