--- a/wp-content/themes/stacylauren/sass/layout/_header.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_header.scss
@@ -86,13 +86,11 @@
     /*width: 25%;*/
     float: right;
     box-sizing: border-box;
-    padding: 0 20px 0 0;
+    padding: 0 35px 0 0;
     position: relative;
-    /* @media ($screen-xs) {
-		width: 200px;
-		margin: 0 auto;
-		text-align: center;
-	}*/
+     @media ($screen-xs) {
+        padding-right: 15px;
+	}
 }
 
 .social a {
