--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -30,7 +30,7 @@
 .entry-header {
     position: relative;
     width: 100%;
-    height: 300px;
+    min-height: 300px;
     z-index: 10;
 	padding: 1em;
 	display: flex;
@@ -44,6 +44,9 @@
     	font-family: $accent-font;	
     	text-transform: none;
     	margin: -32px 0 0;
+    	@media ($screen-xs) {
+    	  font-size: 6em;
+    	}
     }
     /*::after {
         position: absolute;
@@ -61,7 +64,11 @@
 	@media ($screen-xs) {
 		padding: .5em;
 		font-size: .8em;
-	}    
+	}   
+	
+	@media ($screen-xxs) {
+	  min-height: 200px;
+	}
 }
 
 .arrow-down {
@@ -93,17 +100,25 @@
 }
 
 .content {
-    margin-top: 25px;
+    margin: 25px 0;
+}
+
+.comments-area {
+  background: $darkgray;
+  margin: 0;
 }
 
 .projects {
-	column-count: 1;
-    column-gap: 1em;
     box-sizing: border-box;
     
-    @media ($screen-gtxs) {
-    	column-count: 3;
+    @media ($screen-gtsm) {
+      column-gap: 6px;      
+    	column-count: 4;
     }
+    @media ($screen-sm) {
+      column-gap: 6px;   
+    	column-count: 2;
+    }    
 	
 
 	h3 {
@@ -126,10 +141,13 @@
 	
 	article {
 		display: inline-block;
-    	margin: 0 0 1em;
+    	margin: 0 6px;
    		width: 100%;
-		padding: 1em;
+		padding: 0;
 		box-sizing: border-box;
+		@media ($screen-xxs) {
+		  margin: 0;
+		}
 	}
 }
 
@@ -137,6 +155,7 @@
 .screenshot {
 	width: 100%;
 	margin: 0;
+	padding: 0;
   float: left;
   position: relative;
   overflow: hidden;
